tests/NormalTests/paczka1/small_fuzzy/61551262.err
Error in line 1: aWB7WNjLhQY S560 94,1
Error in line 12: Cb8MaqkLIx S560 -4,8
Error in line 10: Cb8MaqkLIx S560 79,0
